<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>es.upv.dsic.gti-ia</groupId>
	<artifactId>omsservices</artifactId>
	<packaging>war</packaging>
	<version>0.3</version>
	<name>OMSSERVICES</name>
	<url>${basedir}/target/site</url>
	<!-- Indica de que proyecto desciende, heredaremos su configuración, librerías, 
		plugins ... -->
	<parent>
		<artifactId>thomas</artifactId>
		<groupId>es.upv.dsic.gti-ia</groupId>
		<version>0.3</version>
		<relativePath>..</relativePath>
	</parent>
	<build>
		<finalName>omsservices</finalName>
		<plugins> <!-- mvn clean axis2-wsdl2code:wsdl2code -->
			<plugin>
				<groupId>org.apache.axis2</groupId>
				<artifactId>axis2-wsdl2code-maven-plugin</artifactId>
				<version>1.4</version>
				<configuration>
					<packageName>
						wtp
					</packageName>

					<wsdlFile>
						./src/main/webapp/WEB-INF/services/InformQuantityMembers/META-INF/InformQuantityMembers.wsdl
					</wsdlFile>



					<databindingName>adb</databindingName>
					<generateServerSide>true</generateServerSide>
					<generateServicesXml>true</generateServicesXml>
					<namespaceURIs>
						<namespaceURI>
							<uri>http://wtp/</uri>
							<packageName>wtp</packageName>
						</namespaceURI>
					</namespaceURIs>
				</configuration>
			</plugin>
			<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.0.2</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<source>1.6</source>
						<target>1.6</target>
					</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.1</version>

				<configuration>
					<tasks>
						<copy todir="src/main/java">
							<fileset dir="./target/generated-sources/axis2/wsdl2code/src/">
								<include name="**/*" />
								<!-- <exclude name="**/PruebaBorrarSkeleton.java" /> -->

							</fileset>
						</copy>
						<mkdir dir="src/main/webapp/WEB-INF/services/AcquiereRole/META-INF/" />
						<mkdir dir="src/main/webapp/WEB-INF/services/AllocateRole/META-INF/" />

						<copy todir="src/main/webapp/WEB-INF/services/AcquiereRole/META-INF/">
							<fileset dir="./target/generated-sources/axis2/wsdl2code/resources/">
								<include name="**/*" />
							</fileset>
						</copy>
						<delete dir="./target/generated-sources" />
					</tasks>
				</configuration>
			</plugin>
			
			<!--plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>2.12</version>
					</dependency>
				</dependencies>
				<configuration>
				    <formats>
				    	<format>xml</format>
				    </formats>  
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=1024m</argLine>
				</configuration>
			</plugin-->
		</plugins>
	</build>

	<reporting>
		<plugins>
			<!--plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<minmemory>128m</minmemory>
					<maxmemory>1g</maxmemory>
				</configuration>
			</plugin-->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<configuration>
					<formats>
						<format>xml</format>
					</formats>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
	
	<profiles>
		<profile>
			<id>metric</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>cobertura-maven-plugin</artifactId>
						<version>2.5.1</version>
						<configuration>
							<formats>
								<format>html</format>
								<format>xml</format>
							</formats>
							<argLine>-Xms4096m -Xmx4096m -XX:MaxPermSize=4096m</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	
	<repositories>
		<repository>
			<id>GTI</id>
			<url>http://gti-ia.dsic.upv.es:8081/artifactory/remote-repos/</url>
		</repository>
	</repositories>
	
	<properties>
		<cobertura.maxmem>8292M</cobertura.maxmem>
		<maven.cobertura.instrumentation.maxmemory>8192M
		</maven.cobertura.instrumentation.maxmemory>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compile.encoding>UTF-8</maven.compile.encoding>
		<maven.compile.fork>false</maven.compile.fork>
	</properties>
	
	<dependencies>
			<dependency>
			<groupId>es.upv.dsic.gti-ia</groupId>
			<artifactId>magentix2</artifactId>
			<version>2.0.3</version>
	</dependency>
	</dependencies>
	
</project>
